Add NSFW tagging and visibility options for Mastodon posts, fix Mastodon login issues

--- a/config.ini
+++ b/config.ini
@@ -23,6 +23,7 @@ ConsumerSecret:
 # Place your Mastodon info here (leave blank to disable Mastodon posting)
 [Mastodon]
 InstanceDomain: 
+PostVisibility: unlisted
 
 # Place your Reddit API info here
 [Reddit]
