Renamed DelayBetweenTweets to DelayBetweenPosts, added more comments to config.ini

--- a/config.ini
+++ b/config.ini
@@ -1,36 +1,54 @@
+# This is the config file for Tootbot! You must restart the bot for any changes to take effect.
+
 # General settings
 [BotSettings]
+# File name for the cache spreadsheet (default is 'cache.csv')
 CacheFile: cache.csv
-MediaFolder: media
-DelayBetweenTweets: 600
+# Minimum delay between social media posts, in seconds (default is '600')
+DelayBetweenPosts: 600
+# Minimum position of post on subreddit front page that the bot will look at (default is '10')
 PostLimit: 10
+# Name of subreddit to take posts from (example: 'gaming')
+# Multiple subreddits can be used like this: 'gaming+funny+news'
 SubredditToMonitor: 
+# Allow NSFW Reddit posts to be posted by the bot
+# NSFW posts will be hidden behind a content warning on Mastodon, regardless of this setting
 NSFWPostsAllowed: false
+# Allow Reddit self-posts to be posted by the bot
 SelfPostsAllowed: true
 
 # Settings related to media attachments
 [MediaSettings]
+# Folder name for media downloads (default is 'media')
 MediaFolder: media
+# Set the bot to only post Reddit posts that directly link to media
+# Links from Gfycat, Giphy, Imgur, i.redd.it, and i.reddituploads.com are currently supported
 MediaPostsOnly: false
 
-# Place your Twitter API keys here (leave blank to disable Twitter posting)
+# Twitter settings (leave blank to disable Twitter posting)
 [Twitter]
 AccessToken: 
 AccessTokenSecret: 
 ConsumerKey: 
 ConsumerSecret: 
 
-# Place your Mastodon info here (leave blank to disable Mastodon posting)
+# Mastodon settings (leave blank to disable Mastodon posting)
 [Mastodon]
+# Name of instance to log into (examples: 'mastodon.social', 'mstn.io', etc.)
 InstanceDomain: 
+# Visibility setting for posts (default is 'unlisted')
+# 'direct' - Post will be visible only to mentioned users
+# 'private' - Post will be visible only to followers
+# 'unlisted' - Post will be public but not appear on the public timeline
+# 'public' - Post will be public
 PostVisibility: unlisted
 
-# Place your Reddit API info here
+# Reddit API settings
 [Reddit]
 Agent: 
 ClientSecret: 
 
-# Place your Imgur API info here
+# Imgur API settings
 [Imgur]
 ClientID: 
 ClientSecret: 
