Move Twitter login keys to secret file, remove whitespace from input

--- a/config.ini
+++ b/config.ini
@@ -27,22 +27,9 @@ MediaPostsOnly: false
 
 # Twitter settings (leave blank to disable Twitter posting)
 [Twitter]
-AccessToken: 
-AccessTokenSecret: 
-ConsumerKey: 
-ConsumerSecret: 
+PostToTwitter: true
 
 # Mastodon settings (leave blank to disable Mastodon posting)
 [Mastodon]
 # Name of instance to log into (examples: 'mastodon.social', 'mstn.io', etc.)
 InstanceDomain: 
-
-# Reddit API settings
-[Reddit]
-Agent: 
-ClientSecret: 
-
-# Imgur API settings
-[Imgur]
-ClientID: 
-ClientSecret: 
