Fix bugs with Twitter login

--- a/config.ini
+++ b/config.ini
@@ -25,11 +25,12 @@ MediaFolder: media
 # Links from Gfycat, Giphy, Imgur, i.redd.it, and i.reddituploads.com are currently supported
 MediaPostsOnly: false
 
-# Twitter settings (leave blank to disable Twitter posting)
+# Twitter settings
 [Twitter]
+# Enable or disable Twitter posting
 PostToTwitter: true
 
-# Mastodon settings (leave blank to disable Mastodon posting)
+# Mastodon settings
 [Mastodon]
-# Name of instance to log into (examples: 'mastodon.social', 'mstn.io', etc.)
+# Name of instance to log into (example: mastodon.social), leave blank to disable Mastodon posting
 InstanceDomain: 
