--- a/config.ini
+++ b/config.ini
@@ -12,8 +12,10 @@ PostLimit: 10
 # Multiple subreddits can be used like this: 'gaming+funny+news'
 SubredditToMonitor: 
 # Allow NSFW Reddit posts to be posted by the bot
-# NSFW posts will be hidden behind a content warning on Mastodon, regardless of this setting
+# NSFW media will be marked as sensitive, regardless of this setting
 NSFWPostsAllowed: false
+# Allow Reddit posts marked as spoilers to be posted by the bot
+SpoilersAllowed: true
 # Allow Reddit self-posts to be posted by the bot
 SelfPostsAllowed: true
 
@@ -34,3 +36,6 @@ PostToTwitter: true
 [Mastodon]
 # Name of instance to log into (example: mastodon.social), leave blank to disable Mastodon posting
 InstanceDomain: 
+# Sets all media attachments as sensitive media, this should be left on 'true' in most cases (note: images from NSFW Reddit posts will always be marked as sensitive)
+# More info: https://gist.github.com/joyeusenoelle/74f6e6c0f349651349a0df9ae4582969#what-does-cw-mean
+SensitiveMedia: true
