Add hashtag setting

--- a/config.ini
+++ b/config.ini
@@ -18,6 +18,9 @@ NSFWPostsAllowed: false
 SpoilersAllowed: true
 # Allow Reddit self-posts to be posted by the bot
 SelfPostsAllowed: true
+# List of hashtags to be used on every post, separated by commas without # symbols (example: hashtag1, hashtag2)
+# Leaving this blank will disable hashtags
+Hashtags: 
 
 # Settings related to media attachments
 [MediaSettings]
