--- a/app.json
+++ b/app.json
@@ -14,7 +14,7 @@
         {
             "plan": "heroku-redis",
             "options": {
-                "maxmemory-policy": "allkeys-lru"
+                "maxmemory_policy": "allkeys-lru"
             }
         }
     ],
