Add Mastodon support to Heroku script, update dependencies

--- a/app.json
+++ b/app.json
@@ -20,11 +20,11 @@
     ],
     "env": {
         "POST_TO_TWITTER": {
-            "description": "Set this to 'true' if you want Tootbot to post to a Twitter account. You will need to enter API information once the Heroku app is set up.",
+            "description": "Set this to 'true' if you want Tootbot to post to a Twitter account. You will need to enter API keys once the Heroku app is set up.",
             "value": "false"
         },
         "POST_TO_MASTODON": {
-            "description": "Set this to 'true' if you want Tootbot to post to a Mastodon account. NOTE: MASTODON SUPPORT DOES NOT WORK RIGHT NOW.",
+            "description": "Set this to 'true' if you want Tootbot to post to a Mastodon account. You will need to enter API keys once the Heroku app is set up.",
             "value": "false"
         },
         "DELAY_BETWEEN_POSTS": {
